Revert "Bug 1972629 - Make sidebar tools/extensions overflow button display inline when tools/extensions are oriented horizontally r=nsharpley" for causing bc failures @ browser_tools_overflow.js
This reverts commit 1f7057c2cc07162a824f8c98bcbc33b6d09cce54.

--- a/browser/components/sidebar/sidebar-main.css
+++ b/browser/components/sidebar/sidebar-main.css
@@ -126,41 +126,8 @@
       width: unset;
     }
 
-    &[overflowing="true"] {
-      padding-inline-end: 0;
-      flex-wrap: nowrap;
-    }
-  }
-}
-
-.buttons-wrapper {
-  display: grid;
-  min-height: calc(var(--button-min-height) + var(--space-small));
-  overflow: hidden;
-
-  :host([expanded]) & {
-    align-items: flex-end;
-  }
-
-  &[overflowing] {
-    grid-template-columns: 1fr;
-    grid-template-rows: auto min-content;
-
-    :host([expanded]) & {
-      grid-template-columns: 1fr min-content;
-      grid-template-rows: 1fr;
-    }
-  }
-
-  /* stylelint-disable-next-line media-query-no-invalid */
-  @media -moz-pref("sidebar.visibility", "expand-on-hover") {
-    /* We need these rules to apply at all times when the sidebar.visibility
-    pref is set to "expand-on-hover" as opposed to when the "sidebar-expand-on-hover" attribute
-    has not been added to root. There are certain scenarios when that attribute is temporarily
-    removed from root such as when toggling the sidebar to expand with the toolbar button. */
-    :host(:not([expanded])) & {
-      grid-template-rows: 1fr;
-      padding-block-end: var(--space-small);
+    :host(:not([sidebar-ongoing-animations])) &[overflowing="true"] {
+      padding-block: 0;
     }
   }
 }
@@ -174,6 +141,11 @@
     opacity: 0;
     transition: opacity 300ms ease-in-out;
   }
+}
+
+.tools-and-extensions {
+  align-self: start;
+  width: 100%;
 }
 
 .bottom-actions {
